<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.parkmobile.asilvia.vehicles.ui.main.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.parkmobile.asilvia.vehicles.ui.main.MainViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/main_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin"
            android:gravity="center"
            android:text="@string/vehicle"
            android:textSize="@dimen/title_text_size" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:elevation="@dimen/elevation"
            app:cardCornerRadius="@dimen/radius"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_title_vehicle_id"
                    android:textSize="@dimen/subtitle_size" />

                <TextView
                    android:id="@+id/tvVehicleId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:textSize="@dimen/body_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_title_country"
                    android:textSize="@dimen/subtitle_size" />

                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:textSize="@dimen/body_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_title_color"
                    android:textSize="@dimen/subtitle_size" />

                <TextView
                    android:id="@+id/tvColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:textSize="@dimen/body_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_title_type"
                    android:textSize="@dimen/subtitle_size" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:textSize="@dimen/body_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_title_default"
                    android:textSize="@dimen/subtitle_size" />

                <TextView
                    android:id="@+id/tvDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:textSize="@dimen/body_size" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</layout>
